--- a/404.html
+++ b/404.html
@@ -55,7 +55,7 @@ if (login!=ME){window.location.href="/#about"; }
               url.hostname === location.hostname+'/#about';
 
             if (isInvalidUrl) {
-              location.replace(homepage);
+              document.write(body)
             } else {
               document.write(body)
             }
