--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 							<article id="about">
 								<h2 class="major">Error</h2>
 								<!-- <span class="image main"><img src="images/pic01.jpg" alt="" /></span> -->
-								<p>本天堂备案号错误或者没有</p>
+								<p>本天堂备案号错误或者没有<br>也有可能是网络问题</p>
 							</article>
 
 						<!-- Contact -->
