--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; forever @Wmz1024 Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; forever @Wmz1024 Untitled. <a href="https://icp.gov.moe/?keyword=20229880" target="_blank">萌ICP备20229880号</a>Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
